--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Open Sans',  sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 body{
@@ -25,7 +25,7 @@ body{
 }
 
 .game-details{
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 1.2rem;
     font-weight: 500;
     padding: 20px 27px;
@@ -43,13 +43,31 @@ body{
 }
 
 .play-board .food{
-    background: #10ae3f;
+    background: #f0ff19;
     border-radius: 5px;
-    box-shadow: 4px 4px 0px 4px #9f1616
+    box-shadow: 1px 1px 0px 1px #ff9500
 }
 
 .play-board .head{
     box-shadow: 2px 2px 2px #000000;
     background: #ffffff;
     border-radius: 5px;
+}
+
+.controls{
+    display: flex;
+    justify-content: space-between;
+}
+
+.controls i {
+    background-color: rgb(63, 63, 63);
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    text-align: center;
+    width: calc(100%/4);
+    padding: 25px;
+    border-radius: 100px;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border-right: 1px solid black;
 }
